--- a/index.html
+++ b/index.html
@@ -2,14 +2,7 @@
 <html lang="en">
 
 <head>
-    <script src="./goit-js-hw-02/js/task-1.js">
-    </script>
-    <script src="./goit-js-hw-02/js/task-2.js">
-    </script>
-    <script src="./goit-js-hw-02/js/task-3.js">
-    </script>
-    <script src="./goit-js-hw-02/js/task-4.js">
-    </script>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
@@ -19,7 +12,14 @@
 
 
 
-
+    <script src="./js/task-1.js">
+    </script>
+    <script src="./js/task-2.js">
+    </script>
+    <script src="./js/task-3.js">
+    </script>
+    <script src="./js/task-4.js">
+    </script>
 </body>
 
 </html>
