--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
 
 <head>
-    <script src="./js/task-1.js">
+    <script defer src="./js/task-1.js">
     </script>
-    <script src="./js/task-2.js">
+    <script defer src="./js/task-2.js">
     </script>
-    <script src="./js/task-3.js">
+    <script defer src="./js/task-3.js">
     </script>
-    <script src="./js/task-4.js">
+    <script defer src="./js/task-4.js">
     </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
